@@ -1,9 +1,7 @@
 <?php
 
 /**
- * This is used only when rendering a template that has blocks but is not extending anything, 
- * it doesn't do anything by itself and should not be used outside of template inheritance context,
- * see {@link http://wiki.dwoo.org/index.php/TemplateInheritance} to read more about it.
+ * Overrides the compiler auto-escape setting within the block
  *
  * This software is provided 'as-is', without any express or implied warranty.
  * In no event will the authors be held liable for any damages arising from the use of this software.
@@ -21,19 +19,45 @@
  * @date       2008-05-10
  * @package    Dwoo
  */
-class Dwoo_Plugin_block extends Dwoo_Block_Plugin implements Dwoo_ICompilable_Block
+class Dwoo_Plugin_auto_escape extends Dwoo_Block_Plugin implements Dwoo_ICompilable_Block
 {
-	public function init($name='')
+	protected static $stack = array();
+
+	public function init($enabled)
 	{
 	}
 
 	public static function preProcessing(Dwoo_Compiler $compiler, array $params, $prepend='', $append='', $type)
 	{
+		$params = $compiler->getCompiledParams($params);
+		switch(strtolower(trim((string) $params['enabled'], '"\'')))
+		{
+			case 'on':
+			case 'true':
+			case 'enabled':
+			case 'enable':
+			case '1':
+				$enable = true;
+				break;
+			case 'off':
+			case 'false':
+			case 'disabled':
+			case 'disable':
+			case '0':
+				$enable = false;
+				break;
+			default:
+				throw new Dwoo_Compilation_Exception('Auto_Escape : Invalid parameter ('.$params['enabled'].'), valid parameters are "enable"/true or "disable"/false');
+		}
+		
+		self::$stack[] = $compiler->getAutoEscape();
+		$compiler->setAutoEscape($enable);
 		return '';
 	}
 
 	public static function postProcessing(Dwoo_Compiler $compiler, array $params, $prepend='', $append='')
 	{
+		$compiler->setAutoEscape(array_pop(self::$stack));
 		return '';
 	}
 }
