@@ -1,7 +1,20 @@
 <?php
 
 /**
- * TOCOM
+ * Generic else block, it supports all builtin optional-display blocks which are if/for/foreach/loop/with
+ * 
+ * If any of those block contains an else statement, the content between {else} and {/block} (you do not 
+ * need to close the else block) will be shown if the block's condition has no been met
+ * 
+ * Example :
+ * 
+ * <code>
+ * {foreach $array val}
+ *   $array is not empty so we display it's values : {$val}
+ * {else}
+ *   if this shows, it means that $array is empty or doesn't exist.
+ * {/foreach}
+ * </code>
  *
  * This software is provided 'as-is', without any express or implied warranty.
  * In no event will the authors be held liable for any damages arising from the use of this software.
