@@ -1,6 +1,7 @@
 <?php
+
 /**
- * TOCOM
+ * Similar to the php for block
  *
  * This software is provided 'as-is', without any express or implied warranty.
  * In no event will the authors be held liable for any damages arising from the use of this software.
