@@ -1,7 +1,7 @@
 <?php
 
 /**
- * TOCOM
+ * Smarty compatibility layer for block plugins, this is used internally and you should not call it
  *
  * This software is provided 'as-is', without any express or implied warranty.
  * In no event will the authors be held liable for any damages arising from the use of this software.
