@@ -1,8 +1,9 @@
 <?php
 
 /**
- * TOCOM
- *
+ * Formats a string to the given format, you can wrap lines at a certain 
+ * length and indent them
+ * 
  * This software is provided 'as-is', without any express or implied warranty.
  * In no event will the authors be held liable for any damages arising from the use of this software.
  *
