@@ -1,6 +1,7 @@
 <?php
+
 /**
- * TOCOM
+ * Internal plugin used to wrap the template output, do not use in your templates as it will break them
  *
  * This software is provided 'as-is', without any express or implied warranty.
  * In no event will the authors be held liable for any damages arising from the use of this software.
