@@ -1,7 +1,8 @@
 <?php
 
 /**
- * TOCOM
+ * Performs some template conversions to allow smarty templates to be used by
+ * the Dwoo compiler.
  *
  * This software is provided 'as-is', without any express or implied warranty.
  * In no event will the authors be held liable for any damages arising from the use of this software.
